Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14334

CSS file opens with wrong editor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.4.1
    • Qt Creator 3.4.0
    • Editors
    • None
    • Linux x86_64
    • 681c5177f9c1af68e103a3f084528d33b702b2d8

      1. Create a QBS project with a syntactically correct CSS file.
      2. Open the CSS file from the Projects view.
      3. Notice how the syntax highlighter has no clue what is going on.
      4. Now, right-click and open the file with "Plain Text Editor". The file is now highlighted correctly.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes