Fix that CSS files where opened in C++ editor

For some reason freedesktop.org claims that CSS files
are text/x-csrc, so we explicitly make plain text editor
the handler for text/css.

Change-Id: I9685706523fff450ab10d1d0eb1850090e55c51a
Task-number: QTCREATORBUG-14334
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>